<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="stats_title">Your all time statistics</string>
    <string name="win">Win:</string>
    <string name="draw">Draw:</string>
    <string name="lose">Lose:</string>
    <string name="temp_number">0</string>
    <string name="win_result">You win!</string>
    <string name="draw_result">It\'s a draw!</string>
    <string name="lose_result">You lose!</string>
    <string name="vs">V.S.</string>
    <string name="computer_image">Computer Image</string>
    <string name="you_image">You Image</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="sample_date">Mon 22 Jun 09:15</string>
    <string name="game_history">Your Game History</string>
    <string name="game_fragment_action_bar_title">Mad Level 4 Task 2</string>
    <string name="game_history_fragment_action_bar_title">Your Game History</string>
</resources>